--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,40 +1,43 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url(tarjetas.css); 
 	
-*{margin: 0;
+*{
+margin: 0;
 font-family: 'Nunito', sans-serif;
-}
-/*Estilos del Header*/
-.header{
-width:100%;
-margin: auto; 	
+ box-sizing: border-box; 
 }
 
+/*Estilos del header*/
+
 .header{
-	height:60px;
+    height: 60px;
 }
 
 .header .contenedor{
     display: flex;
     justify-content: space-between;
-	background: rgb(18, 67, 85);
+    background: rgb(18,67,85);
 }
 
+.contenedor{
+	padding: 0px 30px;
+}
 
 .icon-menu{
     display: block;
-	width: 40px;
-	height: 40px;
-	font-size: 30px;
-	
-	color:white;
-	text-align: center;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    background: rgba(18,67,85,0.8);
+    color:#fff;
+    text-align: center;
     line-height: 40px;
     border-radius: 5px;
     margin-left: auto;
     cursor: pointer;
 }
-.Logo{
+
+.logo{
 	color: white;
 }
 
@@ -42,39 +45,38 @@ margin: auto;
     margin: 5px; 
 }
 
-/*Estilos del menu*/
+/*-----Estilos de menu--------*/
 
-.nave{
+.nav{
     position: absolute;
-    top: 50px;
-    left:-100%;
+    top: 52px;
+    left: -100%;
     width: 100%;
 	transition: all 0.4s;
 }
 
 .menu{
+    list-style: none;
     padding: 0;
     margin: 0;
-	list-style: none;
 	background: rgba(18,67,85,0.8);
-	height: 
-	
 }
 
-.link-menu{
-	display: block;
-    padding: 20px;
-	text-decoration: none;
-	color:white;
+.menu__link{
+    display: block;
+    padding: 25px;
+    background: rgba(18,67,85,0.4);
+    text-decoration: none;
+    color: white;
 }
 
-.item-menu{
-	border-bottom: 1px solid #fff;
-	width: 100%;
+.menu__link:hover, .select{
+    background: rgba(9, 35, 44,0.8);
+    color:#FBA919;
 }
 
 .mostrar{
-	left:0%;
+	left:0;
 }
 
 /*Estilos del banner*/
@@ -84,7 +86,6 @@ margin: auto;
 	margin-top: -60px;
 	position: relative;
 	z-index: -1000;
-	margin-bottom: -5px;
 }
 
 .banner__img{
@@ -92,19 +93,22 @@ margin: auto;
 	height: 65%;
 }
 
-
 .banner .contenedor{
 	position: absolute;
 	top: 50%;
 	left:50%;
 	transform: translateX(-50%) translateY(-50%);
-	width: 97%;
+	width: 100%;
 	color: #000;
 	text-align: center;
 	background-color: rgba(0, 0, 0, 0.5);
-	background: rgba(0, 0, 0, 0.6);
+	background: rgba(0, 0, 0, 0.5);
 	color: white;
-	padding: 8px 2px;
+	padding: 8px 5px;
+}
+
+.banner__titulo{
+	display: none;
 }
 
 /*Estilos Acerca de*/
@@ -141,5 +145,53 @@ margin: auto;
     color: white;
 }
 
+/*responsive - pequeño*/
 
+@media (min-width:480px){
+	.logo{
+		font-size: 40px;
+	}
+	.banner__titulo{
+		font-size: 30px;
+		margin: 5px 0;
+	}
+	.banner__txt{
+		display: block;
+		font-size: 18px;
+		margin: 7px 0;
+	}
+}
 
+/*responsive tablet*/
+
+@media(min-width: 768px) {
+	.banner__txt{
+		font-size: 30px;
+	}
+	
+	.banner__titulo{
+		display: inline-block;
+		font-family: 50px;	
+	}
+}
+
+/*responsive compu*/
+
+@media(min-width: 1024px) {
+	.nav{
+		position: static;
+		width: auto;
+	}
+	
+	.menu{
+		display: flex;
+	}
+	
+	.icon-menu{
+		display:none;
+	}
+	
+	.banner__titulo{
+		font-family: 60px;	
+	}
+}
