--- a/css/estilo.css
+++ b/css/estilo.css
@@ -89,14 +89,14 @@ font-family: 'Nunito', sans-serif;
 
 
 .banner{
-	margin-top: -60px;
+	margin-top: -50px;
 	position: relative;
 	z-index: -1000;
 }
 
 .banner__img{
 	width: 100%;
-	height: 65%;
+	height: 70%;
 }
 
 .banner .contenedor{
@@ -149,6 +149,29 @@ font-family: 'Nunito', sans-serif;
 .info p{
     text-align: center;
     color: white;
+}
+
+/*---------------------------------footer-----------------------*/
+
+.footer{
+	background: rgb(9, 35, 44);
+	color:#fff;
+	padding:30px;
+	text-align: center;
+}
+
+.footer [class^="icon-"]{
+	display: inline-block;
+	color: rgb(9, 35, 44);
+	text-decoration: none;
+	font-size: 30px;
+	padding: 10px;
+	margin: 0px 15px 25px 15px;
+	border-radius: 50%;
+	background: white;
+	width: 50px;
+	height: 50px;
+	line-height: 40px;
 }
 
 /*responsive - pequeño*/
