--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,6 +11,11 @@ font-family: 'Nunito', sans-serif;
 
 .header{
     height: 60px;
+	position: fixed;
+	display: block;
+	top:0.1px;
+	width: 100%;
+	z-index: 1000;
 }
 
 .header .contenedor{
@@ -55,7 +60,7 @@ font-family: 'Nunito', sans-serif;
 
 .nav{
     position: absolute;
-    top: 52px;
+    top: 51px;
     left: -100%;
     width: 100%;
 	transition: all 0.4s;
@@ -89,7 +94,7 @@ font-family: 'Nunito', sans-serif;
 
 
 .banner{
-	margin-top: -50px;
+	margin-top: 50px;
 	position: relative;
 	z-index: -1000;
 }
@@ -123,6 +128,7 @@ font-family: 'Nunito', sans-serif;
     background: rgba(0,0,0,0.2);
     width: 100%;
     height: auto;
+	padding: 20px;
     
 }
 
@@ -132,6 +138,7 @@ font-family: 'Nunito', sans-serif;
     padding: 5px 5px;
     display: block;
     margin: auto;
+	overflow: hidden;
 }
 
 .info article{
@@ -139,6 +146,7 @@ font-family: 'Nunito', sans-serif;
     margin: 5px 5px;
     border-radius: 5px;
     padding: 5px 5px;
+	overflow: hidden;
 }
 
 .info h2{
@@ -247,9 +255,15 @@ font-family: 'Nunito', sans-serif;
         width: 45%;
         
     }
+	
+	.articulo{ 
+		padding: 20px;
+		margin: 25px 0px;
+	}
     
     .info .contenedor_acerca{
         width: 45%;
+		padding:10px; 
     }
 
     .info img{
@@ -262,9 +276,9 @@ font-family: 'Nunito', sans-serif;
 
     .info article{
         background: rgba(0,0,0,0.5);
-        margin: 5px 5px;
+        margin: 5px 10px;
         border-radius: 5px;
-        padding: 5px 5px;
+        padding: 5px 15px;
     }
 
     .info h2{
