--- a/css/estilo.css
+++ b/css/estilo.css
@@ -225,7 +225,8 @@ font-family: 'Nunito', sans-serif;
 	}
 	
 	.contenedor{
-	padding: 0px 10px;
+		padding: 0px 10px;
+		background: none;
 	}
 	
 	.menu{
