Pagina casi finalizada, solo falta agregar información

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -255,9 +255,10 @@
 		display:none;
 	}
 	
-	.banner .contenedor .banner__titulo{
-		font-family: 100px;	
-	}
+    
+    .banner__titulo{
+        font-family: 100px;
+    }
     
     
     /*Acerca de (compu)*/
